--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
           <execution>
             <phase>generate-test-sources</phase>
             <goals>
-              <goal>add-source</goal>
+              <goal>add-test-source</goal>
             </goals>
             <configuration>
               <sources>
