--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.marvinformatics</groupId>
     <artifactId>kiss</artifactId>
-    <version>0.8</version>
+    <version>0.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>kiss-querydsl-mockery</artifactId>
