--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.marvinformatics</groupId>
     <artifactId>kiss</artifactId>
-    <version>0.11-SNAPSHOT</version>
+    <version>0.11.1</version>
   </parent>
 
   <artifactId>kiss-querydsl-mockery</artifactId>
 
   <properties>
-    <querydsl.version>3.3.0</querydsl.version>
+    <querydsl.version>3.2.0</querydsl.version>
   </properties>
 
   <dependencies>
